--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,22 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="navigation_drawer_items_array">
+        <item>HOME</item>
+        <item>MY BIKE</item>
+        <item>SPARE PARTS</item>
+        <item>REQUEST SERVICE</item>
+        <item>NEWS AND EVENTS</item>
+        <item>PROMOTIONS</item>
+        <item>QUIZZES</item>
+        <item>SOS</item>
+        <item>INVITE FRIENDS</item>
+        <item>SOCIAL MEDIA FACEBOOK</item>
+        <item>CHANGE PASSWORD</item>
+        <!--item>FORGOT PASSWORD</item>
+        <item>SIGNUP</item-->
+        <item>LOGIN</item>
+        <item>LOGOUT</item>
+    </string-array>
 </resources>
