--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="auth_key">9736fd0b8c4dfd2964acbfb31d24eed3</string>
     <string name="user_id">0</string>
 
+    <string name="error_no_internet">No internet connection. Please active your internet and try again.</string>
+    <string name="error_sever_connection">Failed to fetch data! Please try again.</string>
+
      <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
         send downstream messages to this app.</string>
     <string name="registering_message">Generating InstanceID token...</string>
