--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="sos_value">+8801671079738</string>
+    <string name="facebook_page_address">http://www.facebook.com/suzukibd/</string>
+    <string name="share_using">Share Using</string>
 
     <string-array name="navigation_drawer_items_array">
         <item>HOME</item>
