--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="serverAddress">http://icebd.com/suzuki/suzukiApi/Server/</string>
     <string name="auth_key">9736fd0b8c4dfd2964acbfb31d24eed3</string>
     <string name="user_id">0</string>
+    <string name="txt_suzuki">SUZUKI</string>
 
     <string name="error_no_internet">No internet connection. Please active your internet and try again.</string>
     <string name="error_sever_connection">Failed to fetch data! Please try again.</string>
@@ -32,6 +33,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="sos_value">+8801671079738</string>
     <string name="facebook_page_address">http://www.facebook.com/suzukibd/</string>
+    <string name="facebook_url_schemes">fb://page/768137996607819</string>
     <string name="share_using">Share Using</string>
 
     <string name="qty_txt">QTY</string>
